Compile Time Typing, Part 1